<resources>
    <string name="app_name">Golscore</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_liga">LigaActivity</string>
    <string name="title_clubs">Equipos</string>
    <string name="title_match">Partidos</string>
    <string name="title_table">Clasificación</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_login">GolScore Login</string>
    <string name="title_stadium">ESTADIO</string>
    <string name="title_escudo">ESCUDO</string>
    <string name="title_dato_equipo">DATO DEL EQUIPO</string>
    <string name="title_localizacion">LOCALIZACIÓN</string>
    <string name="title_goles">GOLES</string>
    <string name="title_tarjetas">TARJETAS</string>
    <string name="title_cambios">CAMBIOS</string>
    <string name="text_jugadores">Jugadores</string>
    <string name="title_porteros">PORTEROS</string>
    <string name="title_defensas">DEFENSAS</string>
    <string name="title_medios">MEDIOS</string>
    <string name="title_delanteros">DELANTEROS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="error_invalid_email">Este email no es válido</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="lbl_forgot_password">¿Contraseña Olvidada?</string>
    <string name="forgot_password_msg">Introduce tu email para enviarte las instrucciones para que resetear tu contraseña</string>
    <string name="btn_atras">Atras</string>
    <string name="btn_reset_password">Restablecer Contraseña</string>
    <string name="hint_email">email</string>
</resources>
