<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.example.dm2.golscore.Fragment.ResumenPartidosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleGoles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:gravity="center"
            android:text="@string/title_goles"
            android:textSize="@dimen/text_12sp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/golesRV"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/titleTarjetas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:gravity="center"
            android:text="@string/title_tarjetas"
            android:textSize="@dimen/text_12sp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/tarjetasRV"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/titleCambios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:gravity="center"
            android:text="@string/title_cambios"
            android:textSize="@dimen/text_12sp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/cambiosRV"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
